--- a/Project/src/main/java/com/example/mainpage.fxml
+++ b/Project/src/main/java/com/example/mainpage.fxml
@@ -4,17 +4,68 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.image.*?>
 
-<GridPane fx:id="gridPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" stylesheets="mainpage.css"
-    fx:controller="com.example.Mainpage_Controller" styleClass="background">
+<BorderPane fx:id="BorderPane" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" stylesheets="mainpage.css"
+    fx:controller="com.example.Mainpage_Controller">
 
-    <VBox spacing="5" styleClass="vbox">
-        <HBox styleClass="hbox">
-            <VBox>
-                 <Button text="Search"/>
-                 <Button text="Profile"/>
-                 <Button text="Calender"/>
-            </VBox>
+    <center>
+        <GridPane 
+            fx:id="gridPane"
+            alignment="center" hgap="10" vgap="10"
+            styleClass="background">
+            <!-- Add your initial GridPane content here -->
+        </GridPane>
+    </center>
+
+    <top>
+        <HBox styleClass="navbar">
+
+            <Region prefWidth="5"/>
+            <!-- Image on the left -->
+            <ImageView>
+                <Image url="NUlogo.png"/>
+                <fitWidth>83</fitWidth>
+                <fitHeight>67</fitHeight>
+            </ImageView>
+            
+            <Region prefWidth="10"/>
+            <!-- Buttons on the left -->
+            
+                <Button fx:id="ProfileButton" onAction="#handleProfileButton">
+                    <graphic>
+                        <ImageView>
+                            <!-- Provide the image file path -->
+                            <Image url="ProfileIcon.png" />
+                        </ImageView>
+                    </graphic>
+                </Button>
+
+                <Button onAction="#handleBookButton">
+                    <graphic>
+                        <ImageView>
+                            <!-- Provide the image file path -->
+                            <Image url="BooksIcon.png" />
+                        </ImageView>
+                    </graphic>
+                </Button>
+
+                <Button onAction="#handleCalendarButton">
+                    <graphic>
+                        <ImageView>
+                            <!-- Provide the image file path -->
+                            <Image url="CalendarIcon.png" />
+                        </ImageView>
+                    </graphic>
+                </Button>
+            
+
+            <!-- Spacer to push buttons to the left -->
+            <Region HBox.hgrow="ALWAYS" />
+
+            <!-- Logout button on the far right -->
+            <Button text="Logout" onAction="#handleLogoutButton"/>
+            <Region prefWidth="10"/>
         </HBox>
-    </VBox>
+    </top>
 
-</GridPane>
+</BorderPane>
+
