--- a/Project/src/main/resources/signup.css
+++ b/Project/src/main/resources/signup.css
@@ -3,6 +3,9 @@
     -fx-background-image: url('MoodleBG.png');
     -fx-background-repeat: no-repeat;
     -fx-background-size: cover;
+    -fx-alignment: center;
+    -fx-hgap:10;
+    -fx-vgap:10;
 }
 
 .white-container{
